--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,7 @@ dependencies:
   intl_phone_field: ^3.1.0
   fl_chart: ^0.66.0
   image_picker: ^1.0.7
-  image: ^4.1.7
+  image: ^3.3.0
   qr_flutter: ^4.1.0
   crypto: ^3.0.3
   flutter_stripe: ^11.5.0
@@ -64,6 +64,9 @@ dependencies:
   barcode: ^2.2.4
   barcode_image: ^2.0.1
   phone_number: ^2.1.0
+  esc_pos_printer: ^4.1.0
+  esc_pos_utils: ^1.1.0
+  collection: ^1.16.0
 
 
 
