--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.4.0",
     "stripe": "^18.4.0"
