--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   collection: ^1.16.0
   flutter_dotenv: ^5.1.0
   http: ^1.5.0
+  dropdown_search: ^5.0.6
 
 
 
@@ -105,6 +106,7 @@ flutter:
     - assets/images/iconfb.jpg
     - assets/images/iconfb.png
     - .env
+    - assets/json/mapping_J&T_address.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
