--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,8 +70,10 @@ dependencies:
   flutter_dotenv: ^5.1.0
   http: ^1.5.0
   dropdown_search: ^5.0.6
+  socket_io_client: ^2.0.3
+  flutter_client_sse: ^2.0.3
 
-
+ 
 
 
 
